adding section for academic acheivements to include research papers related to course material

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="#header">Home</a></li>
         <li><a href="#about">About Me</a></li>
         <li><a href="#experience">Experience</a></li>
+        <li><a href="#academic">Academic</a></li>
         <li><a href="#community">Community</a></li>
         <li><a href="#projects">Projects</a></li>
         <i class="fas fa-times" onclick="closemenu()"></i>
@@ -149,6 +150,223 @@
                 <p><strong>Description:</strong> Managed store operations, inventory, and customer service. Led my district in "Extra Care Plus" promotions and helped educate customers on healthcare products.</p>
             </div>
 
+        </div>
+    </div>
+</div>
+
+<!-- Academic Section with Your Actual Files -->
+<div id="academic" class="section">
+    <div class="container">
+        <h1 class="sub-title">Academic Research & Projects</h1>
+        <p class="academic-subtext">Showcasing research, coursework, and academic achievements that demonstrate analytical and technical capabilities</p>
+
+        <!-- Tab Navigation -->
+        <div class="academic-tabs">
+            <button class="tab-btn active" onclick="showTab('course-projects')">Course Projects</button>
+            <button class="tab-btn" onclick="showTab('research-papers')">Research & Surveys</button>
+            <button class="tab-btn" onclick="showTab('achievements')">Academic Achievements</button>
+        </div>
+
+        <!-- Course Projects Tab -->
+        <div id="course-projects" class="tab-content active">
+            <div class="academic-grid">
+                <div class="academic-card">
+                    <h3>Parallellized Data Compression Tool</h3>
+                    <div class="academic-meta">
+                        <span class="meta-tag course-tag">Multiprocessing Computing</span>
+                        <span class="meta-tag type-tag">Course Project</span>
+                        <span class="meta-tag tech-tag">Parallel Computing</span>
+                    </div>
+                    <p>
+                        Developed a software tool utilizing parallel computing techniques to enhance data compression algorithm efficiency.
+                        Implemented parallelization strategies including multi-threading and distributed computing to optimize compression
+                        processes, resulting in faster and more scalable performance compared to traditional sequential methods.
+                    </p>
+                    <div class="academic-links">
+                        <a href="documents/Survey Paper Parallel Data Compression Multiprocessing.pdf" class="academic-link" target="_blank">📄 View Survey Paper</a>
+                        <a href="images/parallel computing.png" class="academic-link secondary" target="_blank">🖼️ View Diagram</a>
+                    </div>
+                </div>
+
+                <div class="academic-card">
+                    <h3>Deep Learning for Network Traffic Analysis</h3>
+                    <div class="academic-meta">
+                        <span class="meta-tag course-tag">Foundations of Networks</span>
+                        <span class="meta-tag type-tag">Research Project</span>
+                        <span class="meta-tag tech-tag">Deep Learning</span>
+                        <span class="meta-tag tech-tag">Cybersecurity</span>
+                    </div>
+                    <p>
+                        Leveraged deep learning techniques to analyze network traffic data, developing neural network models capable of
+                        identifying patterns, anomalies, and potential security threats. Enhanced efficiency and accuracy of network traffic
+                        analysis, enabling proactive detection and mitigation of cybersecurity risks.
+                    </p>
+                    <div class="academic-links">
+                        <a href="documents/Survey AI in Networks.pdf" class="academic-link" target="_blank">📄 View Project Paper</a>
+                        <a href="images/Deep Learning.jpg" class="academic-link secondary" target="_blank">🖼️ View Concept Image</a>
+                    </div>
+                </div>
+
+                <div class="academic-card">
+                    <h3>Secure Data Transmission for Remote Model Training</h3>
+                    <div class="academic-meta">
+                        <span class="meta-tag course-tag">Cybersecurity</span>
+                        <span class="meta-tag type-tag">Capstone Project</span>
+                        <span class="meta-tag tech-tag">AES Encryption</span>
+                        <span class="meta-tag tech-tag">HTTPS</span>
+                    </div>
+                    <p>
+                        Implemented secure communication techniques to protect sensitive data during remote machine learning processes.
+                        Developed a system with AES encryption and HTTPS protocols, integrating network monitoring and filesystem integrity
+                        checks to ensure confidentiality, integrity, and security of transmitted data.
+                    </p>
+                    <div class="academic-links">
+                        <a href="https://github.com/calvin1011/SECURE-DATA-TRANSMISSION" class="academic-link" target="_blank">💻 GitHub Repository</a>
+                        <a href="documents/Securing Data Transmission Cyber Security.pdf" class="academic-link secondary" target="_blank">📄 Technical Paper</a>
+                        <a href="images/Cyber Secure Data.jpg" class="academic-link secondary" target="_blank">🖼️ Security Diagram</a>
+                    </div>
+                </div>
+
+                <div class="academic-card">
+                    <h3>Deflator Algorithm Implementation</h3>
+                    <div class="academic-meta">
+                        <span class="meta-tag course-tag">Algorithms & Data Structures</span>
+                        <span class="meta-tag type-tag">Research Project</span>
+                        <span class="meta-tag tech-tag">Compression Algorithms</span>
+                        <span class="meta-tag tech-tag">Multiprocessing</span>
+                    </div>
+                    <p>
+                        Comprehensive analysis and implementation of the Deflator compression algorithm with multiprocessing enhancements.
+                        Studied algorithm efficiency, memory usage, and performance optimizations through parallel processing techniques.
+                        Conducted detailed performance analysis comparing sequential vs parallel implementations.
+                    </p>
+                    <div class="academic-links">
+                        <a href="documents/Deflator Algorithm Report Multiprocessing.pdf" class="academic-link" target="_blank">📄 Algorithm Report</a>
+                        <a href="images/parallel computing.png" class="academic-link secondary" target="_blank">🖼️ Implementation Diagram</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Research Papers Tab -->
+        <div id="research-papers" class="tab-content">
+            <div class="academic-grid">
+                <div class="academic-card research-card">
+                    <h3>Survey: Parallel Data Compression in Multiprocessing</h3>
+                    <div class="academic-meta">
+                        <span class="meta-tag course-tag">Advanced Computing</span>
+                        <span class="meta-tag type-tag">Literature Review</span>
+                        <span class="meta-tag tech-tag">Parallel Processing</span>
+                        <span class="meta-tag tech-tag">Data Compression</span>
+                    </div>
+                    <p>
+                        Comprehensive survey of parallel data compression techniques and their applications in multiprocessing environments.
+                        Analyzed various compression algorithms, their parallel implementations, and performance characteristics.
+                        Reviewed current research trends and identified opportunities for future optimization.
+                    </p>
+                    <div class="academic-links">
+                        <a href="documents/Survey Paper Parallel Data Compression Multiprocessing.pdf" class="academic-link" target="_blank">📄 Read Full Survey</a>
+                        <a href="images/parallel computing.png" class="academic-link secondary" target="_blank">🖼️ Visual Summary</a>
+                    </div>
+                </div>
+
+                <div class="academic-card research-card">
+                    <h3>AI Applications in Network Security</h3>
+                    <div class="academic-meta">
+                        <span class="meta-tag course-tag">Network Security</span>
+                        <span class="meta-tag type-tag">Research Paper</span>
+                        <span class="meta-tag tech-tag">Artificial Intelligence</span>
+                        <span class="meta-tag tech-tag">Network Analysis</span>
+                    </div>
+                    <p>
+                        In-depth analysis of artificial intelligence applications in network security, focusing on threat detection,
+                        anomaly identification, and automated response systems. Examined machine learning models for network traffic
+                        analysis and their effectiveness in real-world security scenarios.
+                    </p>
+                    <div class="academic-links">
+                        <a href="documents/Survey AI in Networks.pdf" class="academic-link" target="_blank">📄 View Research</a>
+                        <a href="images/Deep Learning.jpg" class="academic-link secondary" target="_blank">🖼️ AI Network Model</a>
+                    </div>
+                </div>
+
+                <div class="academic-card research-card">
+                    <h3>Serverless Cloud Computing Security Analysis</h3>
+                    <div class="academic-meta">
+                        <span class="meta-tag course-tag">Cloud Computing</span>
+                        <span class="meta-tag type-tag">Research Paper</span>
+                        <span class="meta-tag tech-tag">Serverless</span>
+                        <span class="meta-tag tech-tag">Cloud Security</span>
+                    </div>
+                    <p>
+                        Comprehensive analysis of security implications in serverless cloud computing environments. Examined
+                        FaaS (Function as a Service) security models, potential vulnerabilities, and best practices for
+                        secure serverless application development and deployment.
+                    </p>
+                    <div class="academic-links">
+                        <a href="documents/FaaS Serverless Cloud Computing Paper.pdf" class="academic-link" target="_blank">📄 Full Study</a>
+                        <a href="images/calvin.jpg" class="academic-link secondary" target="_blank">👤 Author Profile</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Academic Achievements Tab -->
+        <div id="achievements" class="tab-content">
+            <div class="academic-grid">
+                <div class="academic-card achievement-card">
+                    <h3>Computer Science Capstone Presentation</h3>
+                    <div class="academic-meta">
+                        <span class="meta-tag course-tag">Senior Capstone</span>
+                        <span class="meta-tag type-tag">Public Presentation</span>
+                        <span class="meta-tag tech-tag">Research Communication</span>
+                    </div>
+                    <p>
+                        Successfully presented capstone project on secure data transmission to faculty panel and industry professionals.
+                        Demonstrated technical proficiency in cybersecurity implementations and ability to communicate complex
+                        security concepts to diverse audiences. Project received recognition for practical application and innovation.
+                    </p>
+                    <div class="academic-links">
+                        <a href="documents/Securing Data Transmission Cyber Security.pdf" class="academic-link" target="_blank">📄 Presentation Paper</a>
+                        <a href="https://github.com/calvin1011/SECURE-DATA-TRANSMISSION" class="academic-link secondary" target="_blank">💻 Project Code</a>
+                    </div>
+                </div>
+
+                <div class="academic-card achievement-card">
+                    <h3>Academic Research Portfolio</h3>
+                    <div class="academic-meta">
+                        <span class="meta-tag course-tag">Research Excellence</span>
+                        <span class="meta-tag type-tag">Academic Achievement</span>
+                        <span class="meta-tag tech-tag">Multiple Disciplines</span>
+                    </div>
+                    <p>
+                        Compiled comprehensive research portfolio covering cybersecurity, parallel computing, AI applications,
+                        and cloud computing. Demonstrated consistent academic excellence through high-quality research papers,
+                        technical implementations, and innovative problem-solving approaches across multiple computer science domains.
+                    </p>
+                    <div class="academic-links">
+                        <a href="documents/Calvin Ssendawula- Resume.pdf" class="academic-link" target="_blank">📄 Academic Resume</a>
+                        <a href="images/calvin.jpg" class="academic-link secondary" target="_blank">👤 Profile</a>
+                    </div>
+                </div>
+
+                <div class="academic-card achievement-card">
+                    <h3>Peer Tutoring & Teaching Excellence</h3>
+                    <div class="academic-meta">
+                        <span class="meta-tag course-tag">Computer Science</span>
+                        <span class="meta-tag type-tag">Teaching Experience</span>
+                        <span class="meta-tag tech-tag">Mentorship</span>
+                    </div>
+                    <p>
+                        Served as supplemental instructor and peer tutor for computer science courses, helping students
+                        understand complex programming concepts and software development practices. Developed teaching materials
+                        and led study sessions, enhancing both technical and communication skills while supporting student success.
+                    </p>
+                    <div class="academic-links">
+                        <a href="documents/Calvin Ssendawula- Resume.pdf" class="academic-link" target="_blank">📄 Teaching Experience</a>
+                        <a href="https://www.linkedin.com/in/calvin-ssendawula-7874b0236/" class="academic-link secondary" target="_blank">🔗 LinkedIn Profile</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
