removing unnecessary content

--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
     </div>
 </div>
 
-<!-- Academic Section with Your Actual Files -->
+<!-- Academic Section -->
 <div id="academic" class="section">
     <div class="container">
-        <h1 class="sub-title">Academic Research & Projects</h1>
+        <h1 class="sub-title">Academic Research</h1>
         <p class="academic-subtext">Showcasing research, coursework, and academic achievements that demonstrate analytical and technical capabilities</p>
 
         <!-- Tab Navigation -->
@@ -174,7 +174,7 @@
                     <h3>Parallellized Data Compression Tool</h3>
                     <div class="academic-meta">
                         <span class="meta-tag course-tag">Multiprocessing Computing</span>
-                        <span class="meta-tag type-tag">Course Project</span>
+                        <span class="meta-tag type-tag">Research Project</span>
                         <span class="meta-tag tech-tag">Parallel Computing</span>
                     </div>
                     <p>
@@ -184,7 +184,7 @@
                     </p>
                     <div class="academic-links">
                         <a href="documents/Survey Paper Parallel Data Compression Multiprocessing.pdf" class="academic-link" target="_blank">📄 View Survey Paper</a>
-                        <a href="images/parallel computing.png" class="academic-link secondary" target="_blank">🖼️ View Diagram</a>
+                        <!--<a href="images/parallel computing.png" class="academic-link secondary" target="_blank">🖼️ View Diagram</a>-->
                     </div>
                 </div>
 
@@ -203,7 +203,7 @@
                     </p>
                     <div class="academic-links">
                         <a href="documents/Survey AI in Networks.pdf" class="academic-link" target="_blank">📄 View Project Paper</a>
-                        <a href="images/Deep Learning.jpg" class="academic-link secondary" target="_blank">🖼️ View Concept Image</a>
+                        <!--<a href="images/Deep Learning.jpg" class="academic-link secondary" target="_blank">🖼️ View Concept Image</a>-->
                     </div>
                 </div>
 
@@ -211,7 +211,7 @@
                     <h3>Secure Data Transmission for Remote Model Training</h3>
                     <div class="academic-meta">
                         <span class="meta-tag course-tag">Cybersecurity</span>
-                        <span class="meta-tag type-tag">Capstone Project</span>
+                        <span class="meta-tag type-tag">Research Project</span>
                         <span class="meta-tag tech-tag">AES Encryption</span>
                         <span class="meta-tag tech-tag">HTTPS</span>
                     </div>
@@ -221,9 +221,9 @@
                         checks to ensure confidentiality, integrity, and security of transmitted data.
                     </p>
                     <div class="academic-links">
-                        <a href="https://github.com/calvin1011/SECURE-DATA-TRANSMISSION" class="academic-link" target="_blank">💻 GitHub Repository</a>
+                        <!--<a href="https://github.com/calvin1011/SECURE-DATA-TRANSMISSION" class="academic-link" target="_blank">💻 GitHub Repository</a>-->
                         <a href="documents/Securing Data Transmission Cyber Security.pdf" class="academic-link secondary" target="_blank">📄 Technical Paper</a>
-                        <a href="images/Cyber Secure Data.jpg" class="academic-link secondary" target="_blank">🖼️ Security Diagram</a>
+                        <!--<a href="images/Cyber Secure Data.jpg" class="academic-link secondary" target="_blank">🖼️ Security Diagram</a>-->
                     </div>
                 </div>
 
