updated content for Research and surveys

--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
                         Reviewed current research trends and identified opportunities for future optimization.
                     </p>
                     <div class="academic-links">
-                        <a href="documents/Survey Paper Parallel Data Compression Multiprocessing.pdf" class="academic-link" target="_blank">📄 Read Full Survey</a>
-                        <a href="images/parallel computing.png" class="academic-link secondary" target="_blank">🖼️ Visual Summary</a>
+                        <a href="documents/Survey Paper Parallel Data Compression Multiprocessing.pdf" class="academic-link" target="_blank">📄 Read Survey</a>
+                        <!--<a href="images/parallel computing.png" class="academic-link secondary" target="_blank">🖼️ Visual Summary</a>-->
                     </div>
                 </div>
 
@@ -285,7 +285,7 @@
                     </p>
                     <div class="academic-links">
                         <a href="documents/Survey AI in Networks.pdf" class="academic-link" target="_blank">📄 View Research</a>
-                        <a href="images/Deep Learning.jpg" class="academic-link secondary" target="_blank">🖼️ AI Network Model</a>
+                        <!--<a href="images/Deep Learning.jpg" class="academic-link secondary" target="_blank">🖼️ AI Network Model</a>-->
                     </div>
                 </div>
 
@@ -303,8 +303,8 @@
                         secure serverless application development and deployment.
                     </p>
                     <div class="academic-links">
-                        <a href="documents/FaaS Serverless Cloud Computing Paper.pdf" class="academic-link" target="_blank">📄 Full Study</a>
-                        <a href="images/calvin.jpg" class="academic-link secondary" target="_blank">👤 Author Profile</a>
+                        <a href="documents/FaaS Serverless Cloud Computing Paper.pdf" class="academic-link" target="_blank">📄 Read Study</a>
+                        <!--<a href="images/calvin.jpg" class="academic-link secondary" target="_blank">👤 Author Profile</a>-->
                     </div>
                 </div>
             </div>
