updated the academic achievements tab with important content only

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
         <!-- Academic Achievements Tab -->
         <div id="achievements" class="tab-content">
             <div class="academic-grid">
-                <div class="academic-card achievement-card">
+                <!--<div class="academic-card achievement-card">
                     <h3>Computer Science Capstone Presentation</h3>
                     <div class="academic-meta">
                         <span class="meta-tag course-tag">Senior Capstone</span>
@@ -328,7 +328,7 @@
                     <div class="academic-links">
                         <a href="documents/Securing Data Transmission Cyber Security.pdf" class="academic-link" target="_blank">📄 Presentation Paper</a>
                         <a href="https://github.com/calvin1011/SECURE-DATA-TRANSMISSION" class="academic-link secondary" target="_blank">💻 Project Code</a>
-                    </div>
+                    </div>-->
                 </div>
 
                 <div class="academic-card achievement-card">
@@ -343,10 +343,6 @@
                         and cloud computing. Demonstrated consistent academic excellence through high-quality research papers,
                         technical implementations, and innovative problem-solving approaches across multiple computer science domains.
                     </p>
-                    <div class="academic-links">
-                        <a href="documents/Calvin Ssendawula- Resume.pdf" class="academic-link" target="_blank">📄 Academic Resume</a>
-                        <a href="images/calvin.jpg" class="academic-link secondary" target="_blank">👤 Profile</a>
-                    </div>
                 </div>
 
                 <div class="academic-card achievement-card">
@@ -361,15 +357,11 @@
                         understand complex programming concepts and software development practices. Developed teaching materials
                         and led study sessions, enhancing both technical and communication skills while supporting student success.
                     </p>
-                    <div class="academic-links">
-                        <a href="documents/Calvin Ssendawula- Resume.pdf" class="academic-link" target="_blank">📄 Teaching Experience</a>
-                        <a href="https://www.linkedin.com/in/calvin-ssendawula-7874b0236/" class="academic-link secondary" target="_blank">🔗 LinkedIn Profile</a>
-                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+
 
 <!-- Community Section -->
 <div id="community" class="section">
