refactor(projects): apply academic card style for design consistency
Updated the Projects section to use the same HTML structure and CSS as the Academic section's cards. This creates a more unified and consistent UI. Removed old, redundant styles from style.css. The original '.project-card' class was retained to ensure JavaScript functionality for the carousel and filtering remains unaffected.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
                 <!-- Résumé Download -->
                 <div class="resume-download" style="margin-top: 20px;">
-                    <a href="documents/Calvin Ssendawula- Resume.pdf" class="button" download target="_blank">
+                    <a href="documents/ccc" class="button" download target="_blank">
                         📄 Download Résumé
                     </a>
                 </div>
@@ -361,7 +361,6 @@
             </div>
         </div>
     </div>
-</div>
 
 <!-- Community Section -->
 <div id="community" class="section">
@@ -392,7 +391,7 @@
     </div>
 </div>
 
-<!-- Projects Section -->
+<!-- Project Section -->
 <section id="projects" class="section">
     <h1 class="sub-title">Projects</h1>
     <p class="projects-subtext">*select to view the code/documentation*</p>
@@ -409,99 +408,109 @@
         <button class="filter-btn" data-skill="java">Java</button>
         <button class="filter-btn" data-skill="postgresql">PostgreSQL</button>
         <button class="filter-btn" data-skill="typescript">TypeScript</button>
-        <button class="filter-btn" data-skill="html">HTML/CSS</button> </div>
+        <button class="filter-btn" data-skill="html">HTML/CSS</button>
+    </div>
 
     <div class="projects-carousel-container">
         <div class="carousel-arrow carousel-prev">&lt;</div>
 
         <div class="projects-container">
 
-            <div class="project-card" data-tags="python ai">
-                <h3 class="project-title">Secure Data Transmission</h3>
-                <div class="project-tags">
-                    <span class="tag">Python</span>
-                    <span class="tag">ML</span>
+            <div class="academic-card project-card" data-tags="python ai">
+                <h3>Secure Data Transmission</h3>
+                <div class="academic-meta">
+                    <span class="meta-tag tech-tag">Python</span>
+                    <span class="meta-tag tech-tag">ML</span>
                 </div>
-                <p class="project-description">Securing data transmission between a client and server during remote model training.</p>
-                <a href="https://github.com/calvin1011/SECURE-DATA-TRANSMISSION" target="_blank" class="project-link">
-                    View Project
-                </a>
+                <p>Securing data transmission between a client and server during remote model training.</p>
+                <div class="academic-links">
+                    <a href="https://github.com/calvin1011/SECURE-DATA-TRANSMISSION" target="_blank" class="academic-link">
+                        View Project
+                    </a>
+                </div>
             </div>
 
-            <div class="project-card" data-tags="python react html"> <h3 class="project-title">AQI Notifier (Air Quality Alert App)</h3>
-                <div class="project-tags">
-                    <span class="tag">Python</span>
-                    <span class="tag">Flask</span>
-                    <span class="tag">OpenWeather API</span>
-                    <span class="tag">Twilio</span>
-                    <span class="tag">React</span>
+            <div class="academic-card project-card" data-tags="python react html">
+                <h3>AQI Notifier (Air Quality Alert App)</h3>
+                <div class="academic-meta">
+                    <span class="meta-tag tech-tag">Python</span>
+                    <span class="meta-tag tech-tag">Flask</span>
+                    <span class="meta-tag tech-tag">Twilio</span>
+                    <span class="meta-tag tech-tag">React</span>
                 </div>
-                <p class="project-description">AQI Notifier is a real-time air quality monitoring app that sends users alerts when air pollution levels exceed safe limits.</p>
-                <a href="https://devpost.com/software/aqi-notifier" target="_blank" class="project-link">
-                    View Project
-                </a>
+                <p>A real-time air quality monitoring app that sends users alerts when air pollution levels exceed safe limits.</p>
+                <div class="academic-links">
+                    <a href="https://devpost.com/software/aqi-notifier" target="_blank" class="academic-link">
+                        View Project
+                    </a>
+                </div>
             </div>
 
-            <div class="project-card" data-tags="swift ai"> <h3 class="project-title">Kobby AI Watch App</h3>
-                <div class="project-tags">
-                    <span class="tag">Swift</span>
-                    <span class="tag">OpenAI</span>
-                    <span class="tag">Whisper</span>
-                    <span class="tag">GCP</span>
-                    <span class="tag">CoreML</span>
+            <div class="academic-card project-card" data-tags="swift ai">
+                <h3>Kobby AI Watch App</h3>
+                <div class="academic-meta">
+                    <span class="meta-tag tech-tag">Swift</span>
+                    <span class="meta-tag tech-tag">OpenAI</span>
+                    <span class="meta-tag tech-tag">CoreML</span>
                 </div>
-                <p class="project-description">AI-powered watchOS app for remembering names during networking.</p>
-                <a href="https://devpost.com/software/kobby" class="project-link" target="_blank">View Project</a>
-                <a href="https://apps.apple.com/us/app/kobby-ai/id6670794222" class="project-link" target="_blank">Download on App Store</a>
+                <p>AI-powered watchOS app for remembering names during networking.</p>
+                <div class="academic-links">
+                    <a href="https://devpost.com/software/kobby" class="academic-link" target="_blank">View Project</a>
+                    <a href="https://apps.apple.com/us/app/kobby-ai/id6670794222" class="academic-link secondary" target="_blank">On App Store</a>
+                </div>
             </div>
 
-            <div class="project-card" data-tags="azure ai javascript copilot"> <h3 class="project-title">AI Career Coach</h3>
-                <div class="project-tags">
-                    <span class="tag">Azure</span>
-                    <span class="tag">OpenAI</span>
-                    <span class="tag">Node.js</span>
-                    <span class="tag">GitHub Copilot</span>
-                    <span class="tag">Azure Functions</span>
+            <div class="academic-card project-card" data-tags="azure ai javascript copilot">
+                <h3>AI Career Coach</h3>
+                <div class="academic-meta">
+                    <span class="meta-tag tech-tag">Azure</span>
+                    <span class="meta-tag tech-tag">OpenAI</span>
+                    <span class="meta-tag tech-tag">Node.js</span>
                 </div>
-                <p class="project-description">Mock interview tool using OpenAI + Azure to generate questions and evaluate your answers with real-time feedback.</p>
-                <a href="https://github.com/calvin1011/ai-career-coach" target="_blank" class="project-link">
-                    View Project
-                </a>
+                <p>Mock interview tool using OpenAI + Azure to generate questions and evaluate your answers with real-time feedback.</p>
+                <div class="academic-links">
+                    <a href="https://github.com/calvin1011/ai-career-coach" target="_blank" class="academic-link">
+                        View Project
+                    </a>
+                </div>
             </div>
 
-            <div class="project-card" data-tags="python java postgresql html"> <h3 class="project-title">Airport Management System</h3>
-                <div class="project-tags">
-                    <span class="tag">Python</span>
-                    <span class="tag">Flask</span>
-                    <span class="tag">Java</span>
-                    <span class="tag">JDBC</span>
-                    <span class="tag">PostgreSQL</span>
-                    <span class="tag">Swing</span>
-                    <span class="tag">ODBC</span>
+            <div class="academic-card project-card" data-tags="python java postgresql html">
+                <h3>Airport Management System</h3>
+                <div class="academic-meta">
+                    <span class="meta-tag tech-tag">Python</span>
+                    <span class="meta-tag tech-tag">Java</span>
+                    <span class="meta-tag tech-tag">PostgreSQL</span>
                 </div>
-                <p class="project-description">A full-stack database management system built for handling airport operations. The web portal (Flask + ODBC) allows managers to manage employees, airplanes, and test data, while the desktop app (Java + JDBC) enables technicians to securely log in and record airworthiness tests.</p>
-                <a href="https://github.com/calvin1011/airportDB" target="_blank" class="project-link">
-                    View Project
-                </a>
+                <p>A full-stack database system for airport operations, featuring a web portal for managers and a desktop app for technicians.</p>
+                <div class="academic-links">
+                    <a href="https://github.com/calvin1011/airportDB" target="_blank" class="academic-link">
+                        View Project
+                    </a>
+                </div>
             </div>
 
-            <div class="project-card" data-tags="react typescript javascript html"> <h3 class="project-title">Grup Lnch (In progress)</h3>
-                <div class="project-tags">
-                    <span class="tag">React</span>
-                    <span class="tag">Jest</span>
-                    <span class="tag">Typescript</span>
-                    <span class="tag">Firebase</span>
-                    <span class="tag">Javascript</span>
+            <div class="academic-card project-card" data-tags="react typescript javascript html">
+                <h3>Grup Lnch (In progress)</h3>
+                <div class="academic-meta">
+                    <span class="meta-tag tech-tag">React</span>
+                    <span class="meta-tag tech-tag">Typescript</span>
+                    <span class="meta-tag tech-tag">Firebase</span>
                 </div>
-                <p class="project-description">An AI-powered food app that helps users filter restaurants based on preferences, dietary restrictions, and cravings. Users can swipe to match with restaurants effortlessly.</p>
-                <a href="https://github.com/GrupLnch/grupytinder" target="_blank" class="project-link">
-                    View Project
-                </a>
+                <p>An AI-powered food app that helps users filter restaurants based on preferences, dietary restrictions, and cravings.</p>
+                <div class="academic-links">
+                    <a href="https://github.com/GrupLnch/grupytinder" target="_blank" class="academic-link">
+                        View Project
+                    </a>
+                </div>
             </div>
 
-        </div> <div class="carousel-arrow carousel-next">&gt;</div>
-    </div> <div class="projects-footer">
-    <a href="https://github.com/calvin1011?tab=repositories" target="_blank" class="view-all-button">View All Projects</a> </div>
+        </div>
+        <div class="carousel-arrow carousel-next">&gt;</div>
+    </div>
+    <div class="projects-footer">
+        <a href="https://github.com/calvin1011?tab=repositories" target="_blank" class="view-all-button">View All Projects</a>
+    </div>
 </section>
 
 <!-- Overlay for background blur effect -->
