refactor(projects): apply academic card style for design consistency
Updated the Projects section to use the same HTML structure and CSS as the Academic section's cards. This creates a more unified and consistent UI. Removed old, redundant styles from style.css. The original '.project-card' class was retained to ensure JavaScript functionality for the carousel and filtering remains unaffected.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
                 <!-- Résumé Download -->
                 <div class="resume-download" style="margin-top: 20px;">
-                    <a href="documents/ccc" class="button" download target="_blank">
+                    <a href="documents/Calvin%20Ssendawula-%20Resume.pdf" class="button" download target="_blank">
                         📄 Download Résumé
                     </a>
                 </div>
