--- a/index.html
+++ b/index.html
@@ -411,102 +411,97 @@
         <button class="filter-btn" data-skill="html">HTML/CSS</button>
     </div>
 
-    <div class="projects-carousel-container">
-        <div class="carousel-arrow carousel-prev">&lt;</div>
+    <div class="academic-grid">
 
-        <div class="projects-container">
-
-            <div class="academic-card project-card" data-tags="python ai">
-                <h3>Secure Data Transmission</h3>
-                <div class="academic-meta">
-                    <span class="meta-tag tech-tag">Python</span>
-                    <span class="meta-tag tech-tag">ML</span>
-                </div>
-                <p>Securing data transmission between a client and server during remote model training.</p>
-                <div class="academic-links">
-                    <a href="https://github.com/calvin1011/SECURE-DATA-TRANSMISSION" target="_blank" class="academic-link">
-                        View Project
-                    </a>
-                </div>
+        <div class="academic-card project-card" data-tags="python ai">
+            <h3>Secure Data Transmission</h3>
+            <div class="academic-meta">
+                <span class="meta-tag tech-tag">Python</span>
+                <span class="meta-tag tech-tag">ML</span>
             </div>
-
-            <div class="academic-card project-card" data-tags="python react html">
-                <h3>AQI Notifier (Air Quality Alert App)</h3>
-                <div class="academic-meta">
-                    <span class="meta-tag tech-tag">Python</span>
-                    <span class="meta-tag tech-tag">Flask</span>
-                    <span class="meta-tag tech-tag">Twilio</span>
-                    <span class="meta-tag tech-tag">React</span>
-                </div>
-                <p>A real-time air quality monitoring app that sends users alerts when air pollution levels exceed safe limits.</p>
-                <div class="academic-links">
-                    <a href="https://devpost.com/software/aqi-notifier" target="_blank" class="academic-link">
-                        View Project
-                    </a>
-                </div>
+            <p>Securing data transmission between a client and server during remote model training.</p>
+            <div class="academic-links">
+                <a href="https://github.com/calvin1011/SECURE-DATA-TRANSMISSION" target="_blank" class="academic-link">
+                    View Project
+                </a>
             </div>
-
-            <div class="academic-card project-card" data-tags="swift ai">
-                <h3>Kobby AI Watch App</h3>
-                <div class="academic-meta">
-                    <span class="meta-tag tech-tag">Swift</span>
-                    <span class="meta-tag tech-tag">OpenAI</span>
-                    <span class="meta-tag tech-tag">CoreML</span>
-                </div>
-                <p>AI-powered watchOS app for remembering names during networking.</p>
-                <div class="academic-links">
-                    <a href="https://devpost.com/software/kobby" class="academic-link" target="_blank">View Project</a>
-                    <a href="https://apps.apple.com/us/app/kobby-ai/id6670794222" class="academic-link secondary" target="_blank">On App Store</a>
-                </div>
-            </div>
-
-            <div class="academic-card project-card" data-tags="azure ai javascript copilot">
-                <h3>AI Career Coach</h3>
-                <div class="academic-meta">
-                    <span class="meta-tag tech-tag">Azure</span>
-                    <span class="meta-tag tech-tag">OpenAI</span>
-                    <span class="meta-tag tech-tag">Node.js</span>
-                </div>
-                <p>Mock interview tool using OpenAI + Azure to generate questions and evaluate your answers with real-time feedback.</p>
-                <div class="academic-links">
-                    <a href="https://github.com/calvin1011/ai-career-coach" target="_blank" class="academic-link">
-                        View Project
-                    </a>
-                </div>
-            </div>
-
-            <div class="academic-card project-card" data-tags="python java postgresql html">
-                <h3>Airport Management System</h3>
-                <div class="academic-meta">
-                    <span class="meta-tag tech-tag">Python</span>
-                    <span class="meta-tag tech-tag">Java</span>
-                    <span class="meta-tag tech-tag">PostgreSQL</span>
-                </div>
-                <p>A full-stack database system for airport operations, featuring a web portal for managers and a desktop app for technicians.</p>
-                <div class="academic-links">
-                    <a href="https://github.com/calvin1011/airportDB" target="_blank" class="academic-link">
-                        View Project
-                    </a>
-                </div>
-            </div>
-
-            <div class="academic-card project-card" data-tags="react typescript javascript html">
-                <h3>Grup Lnch (In progress)</h3>
-                <div class="academic-meta">
-                    <span class="meta-tag tech-tag">React</span>
-                    <span class="meta-tag tech-tag">Typescript</span>
-                    <span class="meta-tag tech-tag">Firebase</span>
-                </div>
-                <p>An AI-powered food app that helps users filter restaurants based on preferences, dietary restrictions, and cravings.</p>
-                <div class="academic-links">
-                    <a href="https://github.com/GrupLnch/grupytinder" target="_blank" class="academic-link">
-                        View Project
-                    </a>
-                </div>
-            </div>
-
         </div>
-        <div class="carousel-arrow carousel-next">&gt;</div>
+
+        <div class="academic-card project-card" data-tags="python react html">
+            <h3>AQI Notifier (Air Quality Alert App)</h3>
+            <div class="academic-meta">
+                <span class="meta-tag tech-tag">Python</span>
+                <span class="meta-tag tech-tag">Flask</span>
+                <span class="meta-tag tech-tag">Twilio</span>
+                <span class="meta-tag tech-tag">React</span>
+            </div>
+            <p>A real-time air quality monitoring app that sends users alerts when air pollution levels exceed safe limits.</p>
+            <div class="academic-links">
+                <a href="https://devpost.com/software/aqi-notifier" target="_blank" class="academic-link">
+                    View Project
+                </a>
+            </div>
+        </div>
+
+        <div class="academic-card project-card" data-tags="swift ai">
+            <h3>Kobby AI Watch App</h3>
+            <div class="academic-meta">
+                <span class="meta-tag tech-tag">Swift</span>
+                <span class="meta-tag tech-tag">OpenAI</span>
+                <span class="meta-tag tech-tag">CoreML</span>
+            </div>
+            <p>AI-powered watchOS app for remembering names during networking.</p>
+            <div class="academic-links">
+                <a href="https://devpost.com/software/kobby" class="academic-link" target="_blank">View Project</a>
+                <a href="https://apps.apple.com/us/app/kobby-ai/id6670794222" class="academic-link secondary" target="_blank">On App Store</a>
+            </div>
+        </div>
+
+        <div class="academic-card project-card" data-tags="azure ai javascript copilot">
+            <h3>AI Career Coach</h3>
+            <div class="academic-meta">
+                <span class="meta-tag tech-tag">Azure</span>
+                <span class="meta-tag tech-tag">OpenAI</span>
+                <span class="meta-tag tech-tag">Node.js</span>
+            </div>
+            <p>Mock interview tool using OpenAI + Azure to generate questions and evaluate your answers with real-time feedback.</p>
+            <div class="academic-links">
+                <a href="https://github.com/calvin1011/ai-career-coach" target="_blank" class="academic-link">
+                    View Project
+                </a>
+            </div>
+        </div>
+
+        <div class="academic-card project-card" data-tags="python java postgresql html">
+            <h3>Airport Management System</h3>
+            <div class="academic-meta">
+                <span class="meta-tag tech-tag">Python</span>
+                <span class="meta-tag tech-tag">Java</span>
+                <span class="meta-tag tech-tag">PostgreSQL</span>
+            </div>
+            <p>A full-stack database system for airport operations, featuring a web portal for managers and a desktop app for technicians.</p>
+            <div class="academic-links">
+                <a href="https://github.com/calvin1011/airportDB" target="_blank" class="academic-link">
+                    View Project
+                </a>
+            </div>
+        </div>
+
+        <div class="academic-card project-card" data-tags="react typescript javascript html">
+            <h3>Grup Lnch (In progress)</h3>
+            <div class="academic-meta">
+                <span class="meta-tag tech-tag">React</span>
+                <span class="meta-tag tech-tag">Typescript</span>
+                <span class="meta-tag tech-tag">Firebase</span>
+            </div>
+            <p>An AI-powered food app that helps users filter restaurants based on preferences, dietary restrictions, and cravings.</p>
+            <div class="academic-links">
+                <a href="https://github.com/GrupLnch/grupytinder" target="_blank" class="academic-link">
+                    View Project
+                </a>
+            </div>
+        </div>
+
     </div>
     <div class="projects-footer">
         <a href="https://github.com/calvin1011?tab=repositories" target="_blank" class="view-all-button">View All Projects</a>
