added new project deplyed to prod

--- a/index.html
+++ b/index.html
@@ -413,6 +413,25 @@
 
     <div class="academic-grid">
 
+        <div class="academic-card project-card" data-tags="react typescript javascript html firebase nextjs">
+            <h3>College Resource Hub</h3>
+            <div class="academic-meta">
+                <span class="meta-tag tech-tag">React</span>
+                <span class="meta-tag tech-tag">Next.js</span>
+                <span class="meta-tag tech-tag">TypeScript</span>
+                <span class="meta-tag tech-tag">Firebase</span>
+            </div>
+            <p>A full-stack, real-time web app connecting students with career resources shared by professors.</p>
+            <div class="academic-links">
+                <a href="https://www.collegecareergap.com" target="_blank" class="academic-link">
+                    View Live App
+                </a>
+                <a href="https://github.com/calvin1011/college-career-gap" target="_blank" class="academic-link secondary">
+                    View Code
+                </a>
+            </div>
+        </div>
+
         <div class="academic-card project-card" data-tags="python ai">
             <h3>Secure Data Transmission</h3>
             <div class="academic-meta">
@@ -482,21 +501,6 @@
             <p>A full-stack database system for airport operations, featuring a web portal for managers and a desktop app for technicians.</p>
             <div class="academic-links">
                 <a href="https://github.com/calvin1011/airportDB" target="_blank" class="academic-link">
-                    View Project
-                </a>
-            </div>
-        </div>
-
-        <div class="academic-card project-card" data-tags="react typescript javascript html">
-            <h3>Grup Lnch (In progress)</h3>
-            <div class="academic-meta">
-                <span class="meta-tag tech-tag">React</span>
-                <span class="meta-tag tech-tag">Typescript</span>
-                <span class="meta-tag tech-tag">Firebase</span>
-            </div>
-            <p>An AI-powered food app that helps users filter restaurants based on preferences, dietary restrictions, and cravings.</p>
-            <div class="academic-links">
-                <a href="https://github.com/GrupLnch/grupytinder" target="_blank" class="academic-link">
                     View Project
                 </a>
             </div>
